Fixed typos and updated resources in Collections and Core.

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -156,7 +156,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Messages.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Messages.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
