Core: Added endianness sensitive bit converter type.

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -143,6 +143,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Messages.resx</DependentUpon>
     </Compile>
+    <Compile Include="Utilities\ByteOrder.cs" />
+    <Compile Include="Utilities\EndianBitConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Collections\Collections.csproj">
