--- a/src/Tests.Core.Reference/Tests.Core.Reference.csproj
+++ b/src/Tests.Core.Reference/Tests.Core.Reference.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Collections\Formula\Transformations\P6LeftHandedSeismicBinGridTransformationTest.cs" />
     <Compile Include="Collections\Formula\Transformations\P6RightHandedSeismicBinGridTransformationTest.cs" />
     <Compile Include="Collections\Formula\Transformations\SimilarityTransformationTest.cs" />
+    <Compile Include="Converters\WellKnownTextConverterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestUtilities.cs" />
   </ItemGroup>
