csproj file update

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -25,6 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Indexes\QuadTree.cs">
+      <ExcludedFromBuild>false</ExcludedFromBuild>
+    </Compile>
     <Compile Update="Resources\CoreMessages.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
