--- a/src/Storage/Storage.csproj
+++ b/src/Storage/Storage.csproj
@@ -17,6 +17,12 @@
     <CodeAnalysisRuleSet>..\analyzer.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>True</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <AdditionalFiles Include="..\stylecop.json" />
   </ItemGroup>
