--- a/src/Storage.Hadoop/Storage.Hadoop.csproj
+++ b/src/Storage.Hadoop/Storage.Hadoop.csproj
@@ -14,8 +14,14 @@
     <PackageProjectUrl>https://github.com/robertogiachetta/aegis</PackageProjectUrl>
   </PropertyGroup>
 
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>True</DebugSymbols>
+  </PropertyGroup>  
+  
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
   </ItemGroup>
 
   <ItemGroup>
