--- a/src/Tests.Core/packages.config
+++ b/src/Tests.Core/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.1.0" targetFramework="net461" />
+  <package id="Moq" version="4.7.63" targetFramework="net461" />
   <package id="NUnit" version="3.6.1" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net461" />
   <package id="OpenCover" version="4.6.519" targetFramework="net461" />
