--- a/src/Tests.Core/Tests.Core.csproj
+++ b/src/Tests.Core/Tests.Core.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Features\FeatureCollectionTest.cs" />
     <Compile Include="Features\FeatureFactoryTest.cs" />
     <Compile Include="Features\FeatureTest.cs" />
+    <Compile Include="Indexes\KDTreeTest.cs" />
     <Compile Include="Indexes\QuadTreeTest.cs" />
     <Compile Include="Indexes\Rectangle\RStarTreeTest.cs" />
     <Compile Include="Indexes\Rectangle\RTreeTest.cs" />
