--- a/src/Tests.Core/Tests.Core.csproj
+++ b/src/Tests.Core/Tests.Core.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Algorithms\RandomPolygonGeneratorTest.cs" />
     <Compile Include="Algorithms\ShamosHoeyAlgorithmTest.cs" />
     <Compile Include="Algorithms\WindingNumberAlgorithmTest.cs" />
+    <Compile Include="Converters\GeographyMarkupConverterTest.cs" />
     <Compile Include="Converters\WellKnownBinaryConverterTest.cs" />
     <Compile Include="Converters\WellKnownTextConverterTest.cs" />
     <Compile Include="CoordinateTest.cs" />
