--- a/src/Tests.Core.Reference/Tests.Core.Reference.csproj
+++ b/src/Tests.Core.Reference/Tests.Core.Reference.csproj
@@ -1,145 +1,38 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{95AE11C0-B997-4352-A3A8-2DC94BE51263}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ELTE.AEGIS.Tests.Reference</RootNamespace>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <AssemblyName>AEGIS.Tests.Core.Reference</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <RootNamespace>AEGIS.Tests.Core.Reference</RootNamespace>
+    <Authors>Roberto Giachetta et al.</Authors>
+    <Company>Eötvös Loránd University (ELTE)</Company>
+    <Description>Numerics library of the AEGIS framework.</Description>
+    <Copyright>Copyright Roberto Giachetta 2016-2017</Copyright>
+    <PackageLicenseUrl>http://opensource.org/licenses/ECL-2.0</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/robertogiachetta/aegis</PackageProjectUrl>
+    <Version>0.1.0</Version>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+
     <CodeAnalysisRuleSet>..\analyzer.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>
-    </DocumentationFile>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>
-    </DocumentationFile>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.6.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.6.1\lib\net45\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="Shouldly, Version=2.8.2.0, Culture=neutral, PublicKeyToken=6042cbcb05cbc941, processorArchitecture=MSIL">
-      <HintPath>..\packages\Shouldly.2.8.2\lib\net451\Shouldly.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="SimpleInjector, Version=4.0.7.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
-      <HintPath>..\packages\SimpleInjector.4.0.7\lib\net45\SimpleInjector.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Collections\Formula\Conversions\GeocentricToTopocentricConversionTest.cs" />
-    <Compile Include="Collections\Formula\Conversions\GeographicToGeocentricConversionTest.cs" />
-    <Compile Include="Collections\Formula\Conversions\GeographicToTopocentricConversionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\AmericanPolyconicProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\CassiniSoldnerProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\ColombiaUrbanProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\EquidistantCylindricalProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\GnomonicProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\GuamProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\HotineObliqueMercatorBProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\HyperbolicCassiniSoldnerProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\KrovakModifiedNorthOrientedProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\KrovakModifiedProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\KrovakNorthOrientedProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\KrovakProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\LabordeObliqueMercatorProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\LambertConicConformal1SPProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\LambertConicConformal1SPWestOrientatedProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\LambertConicConformal2SPBelgiumProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\LambertConicConformal2SPMichiganProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\LambertConicConformal2SPProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\LambertConicNearConformalProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\LambertCylindricalEqualAreaEllipsoidalProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\LambertCylindricalEqualAreaSphericalProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\MercatorAProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\MercatorBProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\MercatorSphericalProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\ModifiedAzimuthalEquidistantProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\ObliqueStereographicProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\OrthographicProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\PolarStereographicAProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\PolarStereographicBProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\PolarStereographicCProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\PopularVisualisationPseudoMercatorProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\SinusoidalProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\TransverseMercatorProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\TransverseMercatorSouthProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\VerticalPerspectiveOrthographicProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\VerticalPerspectiveProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Projections\WorldMillerCylindricalProjectionTest.cs" />
-    <Compile Include="Collections\Formula\Transformations\AffineParametricTransformationTest.cs" />
-    <Compile Include="Collections\Formula\Transformations\GeneralPolynomial6TransformationTest.cs" />
-    <Compile Include="Collections\Formula\Transformations\GeocentricTranslationTest.cs" />
-    <Compile Include="Collections\Formula\Transformations\P6LeftHandedSeismicBinGridTransformationTest.cs" />
-    <Compile Include="Collections\Formula\Transformations\P6RightHandedSeismicBinGridTransformationTest.cs" />
-    <Compile Include="Collections\Formula\Transformations\SimilarityTransformationTest.cs" />
-    <Compile Include="Converters\WellKnownTextConverterTest.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestUtilities.cs" />
-  </ItemGroup>
+
   <ItemGroup>
     <AdditionalFiles Include="..\stylecop.json" />
   </ItemGroup>
+
   <ItemGroup>
-    <ProjectReference Include="..\Core.Reference\Core.Reference.csproj">
-      <Project>{ce2d71c9-2638-4c9d-a179-f8dde05b584b}</Project>
-      <Name>Core.Reference</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Core\Core.csproj">
-      <Project>{ac1f78df-a627-46f0-bcdd-0521868beedf}</Project>
-      <Name>Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Numerics\Numerics.csproj">
-      <Project>{1565f958-fc9d-4670-92e2-ca09025014cb}</Project>
-      <Name>Numerics</Name>
-    </ProjectReference>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="Moq" Version="4.8.1" />
+    <PackageReference Include="NUnit" Version="3.9.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.9.0" />
+    <PackageReference Include="Shouldly" Version="3.0.0" />
   </ItemGroup>
+
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\Collections\Collections.csproj" />
+    <ProjectReference Include="..\Core.Reference\Core.Reference.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Numerics\Numerics.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\Newtonsoft.Json.dll" />
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
