--- a/src/Storage.Hadoop/Storage.Hadoop.csproj
+++ b/src/Storage.Hadoop/Storage.Hadoop.csproj
@@ -18,10 +18,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>full</DebugType>
     <DebugSymbols>True</DebugSymbols>
+    <DocumentationFile>..\..\docs\AEGIS.Storage.Hadoop.xml</DocumentationFile>
   </PropertyGroup>  
   
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
   <ItemGroup>
