--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,14 +20,11 @@ build:
 
 # Execute script before build
 before_build:
+ - choco install opencover.portable
+ - choco install codecov
  - nuget restore src\AEGIS.sln
 
 # Execute test script 
 test_script:
- - src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -target:"src\packages\NUnit.ConsoleRunner.3.6.1\tools\nunit3-console.exe" -targetargs:"src\Tests.Collections\bin\Debug\AEGIS.Tests.Collections.dll src\Tests.Core\bin\Debug\AEGIS.Tests.Core.dll src\Tests.Core.Reference\bin\Debug\AEGIS.Tests.Core.Reference.dll src\Tests.Numerics\bin\Debug\AEGIS.Tests.Numerics.dll src\Tests.Numerics\bin\Debug\AEGIS.Tests.Numerics.dll" -output:".\coverage.xml" -filter:"+[AEGIS*]* -[AEGIS.Tests*]* -[*.Designer.*]*"
-
-# Execute script after tests
-after_test:
- - "SET PATH=C:\\Python34;C:\\Python34\\Scripts;%PATH%"
- - pip install codecov
- - codecov -f "coverage.xml"
+ - OpenCover.Console.exe -register:user -target:"dotnet.exe" -targetargs:"test src" -output:coverage.xml -oldStyle -filter:"+[*]* -[Tests*]*"
+ - codecov -f .\coverage.xml -t $(codecov_token)
