--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -10,7 +10,7 @@
     <Description>Core library of the AEGIS framework.</Description>
     <Copyright>Copyright Roberto Giachetta 2016-2017</Copyright>
     <PackageLicenseUrl>http://opensource.org/licenses/ECL-2.0</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/robertogiachetta/aegis</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/AegisSpatial/aegis</PackageProjectUrl>
 
     <CodeAnalysisRuleSet>..\analyzer.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
